# high-seas

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  package-lock.json  package.json  setup.go  setup.py
.github/workflows/: docker-image.yml  webpack.yml
high-seas-wfp/high-seas-wfp/: high-seas-wfp.sln
high_seas_desktop/: README.md  go.mod  main.go  pubspec.yaml
high_seas_desktop/test/: widget_test.dart
high_seas_desktop/windows/: CMakeLists.txt
high_seas_mobile/: README.md  pubspec.yaml
high_seas_mobile/lib/: main.dart
high_seas_mobile/test/: widget_test.dart
install-scripts/: setup.go
plex/: Dockerfile  launcher.py  requirements.txt
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
rust-backend/src/api/: api.rs
rust-backend/src/db/: db.rs
rust-backend/src/internal/: mod.rs
rust-backend/src/models/: models.rs
src/api/: api.go
src/cache/: cache.go
src/db/: db.go
src/deluge/: deluge.go
src/jackett/: jackett.go
src/logger/: logger.go
src/metrics/: metrics.go
src/routes/: routes.go
src/utils/: utils.go
sync-stream-backend/: go.mod  main.go  session_db.go
sync-stream-desktop/: go.sum  libvlc_version.h  main.go
sync-stream-web/: README.md  angular.json  package-lock.json  package.json
sync-stream-web/src/: index.html  main.ts
web/: .dockerignore  .gitignore  Dockerfile  angular.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: index.html  main.ts  styles.sass
web/src/app/: routes.ts  (+8 more)
where-stream/: .gitignore  go.mod  go.sum  main.go
(+217 files in other folders)
