[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-server = { version = "0.7.1", features = ['tls-rustls'] }
deluge-rpc = "0.8.0"
jackett-async = "0.1.3"
tower-http = { version = "0.6.2", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.22"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
axum-macros = "0.4.1"
async-compression = "0.4.18"
brotli = "7.0.0"
lazy_static = "1.5.0"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
reqwest = "0.12.9"
chrono = "0.4.38"
